crates/fwob/tests/ui/derive/invalid_timestamp.stderr
error: timestamp must be seconds, milliseconds, microseconds, or nanoseconds
 --> tests/ui/derive/invalid_timestamp.rs:6:10
  |
6 |     key: i64,
  |          ^^^
